Closed Bug 497068 Opened 15 years ago Closed 15 years ago

Fix "will be initialized after" warnings

Categories

(Core :: General, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: Swatinem, Assigned: Swatinem)

References

Details

Attachments

(1 file)

Just trivial reordering.
Attachment #382269 - Flags: review?(dbaron)
Comment on attachment 382269 [details] [diff] [review]
patch [pushed: comment 2]

http://hg.mozilla.org/mozilla-central/rev/b7a674c24602
Attachment #382269 - Attachment description: patch → patch [pushed: comment 2]
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: