Bug 497068: Fix "will be initialized after" warnings; r=dbaron